--- a/notebooks/Data_extraction.ipynb
+++ b/notebooks/Data_extraction.ipynb
@@ -558,32 +558,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "f1523980",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1100,\n",
-       "                   doc_title  \\\n",
-       " 0  Immigration Rules: Index   \n",
-       " 1  Immigration Rules: Index   \n",
-       " \n",
-       "                                              web_url  chunk_id  \\\n",
-       " 0  https://www.gov.uk/guidance/immigration-rules/...         0   \n",
-       " 1  https://www.gov.uk/guidance/immigration-rules/...         1   \n",
-       " \n",
-       "                                           chunk_text  \n",
-       " 0  Paragraph number Introduction (Paragraphs 1 to...  \n",
-       " 1  or have had leave to enter or remain under par...  )"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "from typing import List, Dict\n",
@@ -633,14 +611,398 @@
     "            \"chunk_text\": ch\n",
     "        })\n",
     "\n",
-    "corpus = pd.DataFrame(records)\n",
-    "len(corpus), corpus.head(2)\n"
+    "corpus = pd.DataFrame(records)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e2ccf5b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>doc_title</th>\n",
+       "      <th>web_url</th>\n",
+       "      <th>chunk_id</th>\n",
+       "      <th>chunk_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Immigration Rules: Index</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Paragraph number Introduction (Paragraphs 1 to...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Immigration Rules: Index</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>or have had leave to enter or remain under par...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Immigration Rules: Index</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Victims of domestic violence 289A to 289D Fian...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Immigration Rules: Index</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>DELETED Appendix SN: Service of notices Append...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Immigration Rules: introduction</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The Home Secretary has made changes in the Rul...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1095</th>\n",
+       "      <td>Immigration Rules Appendix Children</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>life. Care Requirement CHI 2.1. If the applica...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1096</th>\n",
+       "      <td>Immigration Rules Appendix Children</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>entry clearance or permission to stay with the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1097</th>\n",
+       "      <td>Immigration Rules Appendix Children</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>must be being granted settlement at the same t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1098</th>\n",
+       "      <td>Immigration Rules Appendix Tuberculosis (TB)</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TB1. A person must provide a valid TB certific...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1099</th>\n",
+       "      <td>Immigration Rules Appendix Tuberculosis (TB)</td>\n",
+       "      <td>https://www.gov.uk/guidance/immigration-rules/...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Madagascar • Malawi • Malaysia • Mali • Marsha...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         doc_title  \\\n",
+       "0                         Immigration Rules: Index   \n",
+       "1                         Immigration Rules: Index   \n",
+       "2                         Immigration Rules: Index   \n",
+       "3                         Immigration Rules: Index   \n",
+       "4                  Immigration Rules: introduction   \n",
+       "...                                            ...   \n",
+       "1095          Immigration Rules Appendix Children    \n",
+       "1096          Immigration Rules Appendix Children    \n",
+       "1097          Immigration Rules Appendix Children    \n",
+       "1098  Immigration Rules Appendix Tuberculosis (TB)   \n",
+       "1099  Immigration Rules Appendix Tuberculosis (TB)   \n",
+       "\n",
+       "                                                web_url  chunk_id  \\\n",
+       "0     https://www.gov.uk/guidance/immigration-rules/...         0   \n",
+       "1     https://www.gov.uk/guidance/immigration-rules/...         1   \n",
+       "2     https://www.gov.uk/guidance/immigration-rules/...         2   \n",
+       "3     https://www.gov.uk/guidance/immigration-rules/...         3   \n",
+       "4     https://www.gov.uk/guidance/immigration-rules/...         0   \n",
+       "...                                                 ...       ...   \n",
+       "1095  https://www.gov.uk/guidance/immigration-rules/...         1   \n",
+       "1096  https://www.gov.uk/guidance/immigration-rules/...         2   \n",
+       "1097  https://www.gov.uk/guidance/immigration-rules/...         3   \n",
+       "1098  https://www.gov.uk/guidance/immigration-rules/...         0   \n",
+       "1099  https://www.gov.uk/guidance/immigration-rules/...         1   \n",
+       "\n",
+       "                                             chunk_text  \n",
+       "0     Paragraph number Introduction (Paragraphs 1 to...  \n",
+       "1     or have had leave to enter or remain under par...  \n",
+       "2     Victims of domestic violence 289A to 289D Fian...  \n",
+       "3     DELETED Appendix SN: Service of notices Append...  \n",
+       "4     The Home Secretary has made changes in the Rul...  \n",
+       "...                                                 ...  \n",
+       "1095  life. Care Requirement CHI 2.1. If the applica...  \n",
+       "1096  entry clearance or permission to stay with the...  \n",
+       "1097  must be being granted settlement at the same t...  \n",
+       "1098  TB1. A person must provide a valid TB certific...  \n",
+       "1099  Madagascar • Malawi • Malaysia • Mali • Marsha...  \n",
+       "\n",
+       "[1100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd024a97",
+   "metadata": {},
+   "source": [
+    "### Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "63d3c20d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65e998ca90c6487ab4198d7a9b4d17e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07f07126f59f48e0b6cf84da1cca8796",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2874956d4f434afcb348c28be5086ace",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30785163058b4db0ac8dad57a64a13e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36cc0b49a5e242ff97b6c2c3fb220d47",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1d59d792c2846d782075d6672320a99",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7e83940131548389e3c5b029c271437",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f89d31dc701b4cfaa7616223bfea3787",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bd7880099c74980ab03103f03102e52",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab3e5630c1764980953c108c4123ab96",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d3045324d0dc400680d90d2f4c0ec25a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "705faaa16c1c481d97927e459009496b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/18 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexed vectors: 1100\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "import faiss\n",
+    "import numpy as np\n",
+    "\n",
+    "# Embedding model\n",
+    "embed_model_name = \"sentence-transformers/all-MiniLM-L6-v2\" \n",
+    "\n",
+    "# Initialize embedder\n",
+    "embedder = SentenceTransformer(embed_model_name)\n",
+    "\n",
+    "# Compute embeddings\n",
+    "embeddings = embedder.encode(\n",
+    "    corpus[\"chunk_text\"].tolist(),\n",
+    "    batch_size=64,\n",
+    "    show_progress_bar=True,\n",
+    "    convert_to_numpy=True,\n",
+    "    normalize_embeddings=True\n",
+    ")\n",
+    "\n",
+    "# Build FAISS index (cosine sim via inner product since vectors are normalized)\n",
+    "dim = embeddings.shape[1]\n",
+    "index = faiss.IndexFlatIP(dim)\n",
+    "index.add(embeddings)\n",
+    "print(\"Indexed vectors:\", index.ntotal)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ccf5b6",
+   "id": "d4fb25a5",
    "metadata": {},
    "outputs": [],
    "source": []
