basic RAG ready

--- a/notebooks/Data_extraction.ipynb
+++ b/notebooks/Data_extraction.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "12fadab4",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "6b1d53d5",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "4  Persons seeking to enter the UK for short-term...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "ddfe194d",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
        "2  Leave to enter the United Kingdom\\n\\n\\n\\n\\n\\n\\...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "f1523980",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e2ccf5b6",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
        "[1100 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,217 +792,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "63d3c20d",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain.vectorstores import FAISS\n",
+    "\n",
+    "# Convert your previous embeddings + corpus into LangChain format\n",
+    "texts = corpus[\"chunk_text\"].tolist()\n",
+    "metadatas = [{\"title\": corpus.loc[i, \"doc_title\"], \"url\": corpus.loc[i, \"web_url\"]} for i in range(len(corpus))]\n",
+    "\n",
+    "# LangChain embedding model (small, CPU-friendly)\n",
+    "embedding_model = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# Create FAISS vector store\n",
+    "faiss_index = FAISS.from_texts(texts=texts, embedding=embedding_model, metadatas=metadatas)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc1ce7b9",
+   "metadata": {},
+   "source": [
+    "### Retrieve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3fed3750",
+   "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65e998ca90c6487ab4198d7a9b4d17e0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07f07126f59f48e0b6cf84da1cca8796",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2874956d4f434afcb348c28be5086ace",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30785163058b4db0ac8dad57a64a13e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36cc0b49a5e242ff97b6c2c3fb220d47",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1d59d792c2846d782075d6672320a99",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7e83940131548389e3c5b029c271437",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f89d31dc701b4cfaa7616223bfea3787",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bd7880099c74980ab03103f03102e52",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab3e5630c1764980953c108c4123ab96",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3045324d0dc400680d90d2f4c0ec25a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "705faaa16c1c481d97927e459009496b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/18 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indexed vectors: 1100\n"
+      " A Skilled Worker visa application requires the following:\n",
+      "\n",
+      "1. Apply online on the specified form, either \"Skilled Worker visa\" (for applicants outside the UK) or \"Skilled Worker\" (for applicants inside the UK).\n",
+      "2. Meet all validity requirements:\n",
+      "   - Payment of any fee and Immigration Health Charge.\n",
+      "   - Providing biometrics when required.\n",
+      "   - Submitting a passport or other travel document that establishes identity and nationality.\n",
+      "   - Having a certificate of sponsorship issued by the sponsor no more than 3 months (90 days if linked to a Sponsorship Reference Number) before the date of application.\n",
+      "   - The applicant must be aged 18 or over on the date of application.\n",
+      "   - If applying for permission to stay, the applicant must be in the UK on the date of application and not have certain types of permission (as a Visitor, Short-term student, Parent of a Child Student, Seasonal Worker, Domestic Worker in a Private Household, or outside the Immigration Rules).\n",
+      "   - If applying for entry clearance, an award from a Government or international scholarship agency covering fees and living costs for study in the UK within the past 12 months requires written consent from that government or agency.\n",
+      "3. Meet suitability requirements (not falling for refusal under Part 9: grounds for refusal, not breaching immigration laws except where specified, and not being on immigration bail).\n",
+      "4. Fulfill eligibility requirements (being the partner or child of a person who meets certain conditions, having last been granted permission as a dependent partner or dependent child of the person, etc.).\n",
+      "Immigration Rules Appendix Skilled Worker https://www.gov.uk/guidance/immigration-rules/immigration-rules-appendix-skilled-worker\n",
+      "which an English Local Authority must or may provide or arrange to be provided under: (i) section 117 of the Mental Health Act 1983 – (After-care); or (ii) Part 1 of the Care Act 2014 (Care and Support). Validity requirements for a Skilled Worker SW 1.1. A person applying for entry clearance or perm ...\n",
+      "\n",
+      "Immigration Rules Appendix Skilled Worker https://www.gov.uk/guidance/immigration-rules/immigration-rules-appendix-skilled-worker\n",
+      "Skilled Worker must apply online on the gov.uk website on the specified form, “Settle in the UK in various immigration categories: form SET(O)”. SW 37.2. An application for settlement as a partner or child of a person on the Skilled Worker route must meet all the following requirements: (a) any fee  ...\n",
+      "\n",
+      "Immigration Rules Appendix Global Business Mobility routes  https://www.gov.uk/guidance/immigration-rules/immigration-rules-appendix-global-business-mobility-routes\n",
+      "on this route. The Global Business Mobility – Secondment Worker route is not a route to settlement. Validity requirements for a Global Business Mobility - Secondment Worker (“Secondment Worker”) SEC 1.1. A person applying for entry clearance or permission to stay as a Secondment Worker must apply on ...\n",
+      "\n",
+      "Immigration Rules Appendix Temporary Work - International Agreement https://www.gov.uk/guidance/immigration-rules/immigration-rules-appendix-temporary-work-international-agreement\n",
+      "an international treaty signed by UK. (c) DELETED. Private servant in diplomatic household requirements IA 7.1. The applicant must be employed as a private servant by, and in the household of, either: (a) a named member of staff of a diplomatic or consular mission who has diplomatic privileges and i ...\n",
+      "\n",
+      "Immigration Rules Appendix Overseas Domestic Worker https://www.gov.uk/guidance/immigration-rules/immigration-rules-appendix-overseas-domestic-worker\n",
+      "This route is for an Overseas Domestic Worker who is seeking to come to the UK to work for up to a maximum of 6 months as a domestic worker with their current employer. Dependants are not permitted on this route. Validity requirements for an Overseas Domestic Worker ODW 1.1. A person applying for en ...\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "import faiss\n",
-    "import numpy as np\n",
+    "from langchain_ollama import OllamaLLM\n",
+    "from langchain.chains import RetrievalQA\n",
     "\n",
-    "# Embedding model\n",
-    "embed_model_name = \"sentence-transformers/all-MiniLM-L6-v2\" \n",
+    "llm = OllamaLLM(model=\"mistral:instruct\")\n",
     "\n",
-    "# Initialize embedder\n",
-    "embedder = SentenceTransformer(embed_model_name)\n",
     "\n",
-    "# Compute embeddings\n",
-    "embeddings = embedder.encode(\n",
-    "    corpus[\"chunk_text\"].tolist(),\n",
-    "    batch_size=64,\n",
-    "    show_progress_bar=True,\n",
-    "    convert_to_numpy=True,\n",
-    "    normalize_embeddings=True\n",
+    "\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm=llm,\n",
+    "    chain_type=\"stuff\",          \n",
+    "    retriever=faiss_index.as_retriever(search_kwargs={\"k\": 5}),  # top 5 chunks\n",
+    "    return_source_documents=True  \n",
     ")\n",
     "\n",
-    "# Build FAISS index (cosine sim via inner product since vectors are normalized)\n",
-    "dim = embeddings.shape[1]\n",
-    "index = faiss.IndexFlatIP(dim)\n",
-    "index.add(embeddings)\n",
-    "print(\"Indexed vectors:\", index.ntotal)\n"
+    "\n",
+    "query = \"What are the requirements for a Skilled Worker visa?\"\n",
+    "result = qa_chain.invoke({\"query\": query})\n",
+    "\n",
+    "# Get the answer\n",
+    "print(result['result'])\n",
+    "\n",
+    "# Optional: view the source chunks retrieved\n",
+    "for doc in result['source_documents']:\n",
+    "    print(doc.metadata['title'], doc.metadata['url'])\n",
+    "    print(doc.page_content[:300], \"...\\n\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4fb25a5",
+   "id": "6bebcf89",
    "metadata": {},
    "outputs": [],
    "source": []
